fix: in room list item, replace bottom padding by top and bottom
Outline focus is not aligned when only using a padding bottom. Replace
by a padding-top and a padding-bottom.

The padding top is not added on the first item and the padding bottom
neither on the last item

--- a/packages/shared-components/src/room-list/RoomListItemView/RoomListItemView.module.css
+++ b/packages/shared-components/src/room-list/RoomListItemView/RoomListItemView.module.css
@@ -9,7 +9,6 @@
     /* Remove button default style */
     background: unset;
     border: none;
-    padding: 0;
     text-align: unset;
 
     /* Needed to position the selected marker */
@@ -17,8 +16,8 @@
     cursor: pointer;
     width: 100%;
     /* Gap between items, accounted for in ROOM_LIST_ITEM_HEIGHT */
-    padding-bottom: var(--cpd-space-2x);
-    /* 44px height + padding bottom */
+    padding: var(--cpd-space-1x) 0;
+    /* 44px height + padding */
     min-height: calc(44px + var(--cpd-space-2x));
 
     font: var(--cpd-font-body-md-regular);
@@ -93,10 +92,9 @@
     .container::before {
         content: "";
         position: absolute;
-        /* Marker height is 34px, room list item height is 44px. So position is at 5px at and bottom */
-        top: 5px;
-        /* Add the padding bottom to center */
-        bottom: calc(5px + var(--cpd-space-2x));
+        /* Marker height is 34px, room list item height is 44px. So position is at 5px at and bottom + padding */
+        top: calc(5px + var(--cpd-space-1x));
+        bottom: calc(5px + var(--cpd-space-1x));
         left: 0;
         width: 4px;
         background-color: var(--cpd-color-bg-accent-rest);
@@ -112,4 +110,33 @@
 /* Set icon color for hover menu buttons */
 .hoverMenu svg {
     fill: var(--cpd-color-icon-primary);
+}
+
+/*
+ * Remove top padding for the first item and bottom padding for the last item to align them with the container border.
+ * And adjust the selected marker position accordingly.
+ */
+.firstItem {
+    padding-top: 0;
+
+    .container::before {
+        top: 5px;
+    }
+}
+
+.lastItem {
+    padding-bottom: 0;
+
+    .container::before {
+        bottom: 5px;
+    }
+}
+
+.firstItem,
+.lastItem {
+    min-height: calc(44px + var(--cpd-space-1x));
+}
+
+.firstItem.lastItem {
+    min-height: 44px;
 }
